# BC-ERDDAP

./: .gitignore  PACKAGE.md  README.md  requirements.txt  setup.cfg  wrapper.py
bcedd/: __main__.py  datasetid.yaml  erddap.yaml  example.yaml  parameters.py  parameters.yaml  setupcfg.py  xml4Erddap.py
bcedd/cfg/: README.md  config_default.yaml  logging.yaml  parameters.yaml
bcedd/dataset/: footer.xml  header.xml
