[metadata]
name = bcedd
author = Julien Paul, University of Bergen and Bjerknes Climate Data Centre
author-email = julien.paul@uib.no
summary = Generate and update datasets.xml file for BlueCloud ERDDAP
credits =
maintainer = BCDC
description-file = README.md
# home-page =
license = CC BY-SA 4.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Operating System :: Unix
    Programming Language :: Python
keywords =
    erddap
    bluecloud

[entry_points]
console_scripts =
    bcedd = bcedd.__main__:main

[files]
packages =
    bcedd
